Bug 186940 - KMail crashes when trying to display a message
Summary: KMail crashes when trying to display a message
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.1
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-12 11:01 UTC by Evgenij Besogonov
Modified: 2009-06-11 04:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Evgenij Besogonov 2009-03-12 11:01:29 UTC
Version:           1.11.1 (using KDE 4.2.1)
OS:                Linux
Installed from:    Debian testing/unstable Packages

KMail crashes when trying to display a new incoming message at the first time. Restarting KMail and viewing that message again causes no toubles.
Aggregate mode is "Activity by Date, Flat". Seemingly, there's no such bug for aggregate mode "Standard mailing list".

It's really annoying :(

Приложение: KMail (kmail), сигнал SIGSEGV
0x00007f859cbc58d1 in nanosleep () from /lib/libc.so.6

Thread 1 (Thread 0x7f859fb95770 (LWP 5493)):
[KCrash Handler]
#5  0x00007f859eb7949f in ?? () from /usr/lib/libkmailprivate.so.4
#6  0x00007f859ea4067e in KMMainWidget::updateMessageActions () from /usr/lib/libkmailprivate.so.4
#7  0x00007f859ea581f5 in KMMainWidget::qt_metacall () from /usr/lib/libkmailprivate.so.4
#8  0x00007f859e0576e4 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#9  0x00007f859e051ff3 in QObject::event () from /usr/lib/libQtCore.so.4
#10 0x00007f859d567a5d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#11 0x00007f859d56f7da in QApplication::notify () from /usr/lib/libQtGui.so.4
#12 0x00007f859f6d411b in KApplication::notify () from /usr/lib/libkdeui.so.5
#13 0x00007f859e043391 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#14 0x00007f859e06f266 in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007f859e06b7bd in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007f8595889afb in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#17 0x00007f859588d2bd in ?? () from /usr/lib/libglib-2.0.so.0
#18 0x00007f859588d47b in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#19 0x00007f859e06b71f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#20 0x00007f859d5f947f in ?? () from /usr/lib/libQtGui.so.4
#21 0x00007f859e041cb2 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#22 0x00007f859e041e3d in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#23 0x00007f859e0442ed in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#24 0x0000000000402f8b in _start ()
Comment 1 Jaime Torres 2009-03-12 12:01:38 UTC
If you can reproduce the crash at will, may you read
http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
and post a complete backtrace here? 
Thanks :)
Comment 2 Evgenij Besogonov 2009-03-12 12:26:02 UTC
(In reply to comment #1)
> If you can reproduce the crash at will, may you read
> http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports
> and post a complete backtrace here? 
> Thanks :)

Here it is

Приложение: KMail (kmail), сигнал SIGSEGV
0x00007fa130e4f8d1 in nanosleep () from /lib/libc.so.6
Current language:  auto; currently c

Thread 1 (Thread 0x7fa133e1f770 (LWP 7029)):
[KCrash Handler]
#5  KMail::MessageListView::Widget::getSelectionStats (this=0x15cfd60, selectedSernums=@0x7fff3bf66cc0, selectedVisibleSernums=@0x7fff3bf66cb0, allSelectedBelongToSameThread=0x7fff3bf66cdf, 
    includeCollapsedChildren=<value optimized out>) at ../../kmail/messagelistview/widget.cpp:579
#6  0x00007fa132cca67e in KMMainWidget::updateMessageActions (this=0x15cb800) at ../../kmail/kmmainwidget.cpp:4288
#7  0x00007fa132e046b5 in KMail::MessageListView::Widget::viewMessageListContextPopupRequest (this=0x15cfd60, selectedItems=<value optimized out>, globalPos=@0x7fff3bf66df0)
    at ../../kmail/messagelistview/widget.cpp:607
#8  0x00007fa132e54d76 in KMail::MessageListView::Core::View::mousePressEvent (this=0x15f1090, e=0x7fff3bf67cc0) at ../../kmail/messagelistview/core/view.cpp:1758
#9  0x00007fa13184411f in QWidget::event (this=0x15f1090, event=0x7fff3bf67cc0) at kernel/qwidget.cpp:7159
#10 0x00007fa131c6817d in QAbstractItemView::viewportEvent (this=0x15f1090, event=0x7fff3bf67cc0) at itemviews/qabstractitemview.cpp:1429
#11 0x00007fa131c9cc00 in QTreeView::viewportEvent (this=0x15f1090, event=0x7fff3bf67cc0) at itemviews/qtreeview.cpp:1265
#12 0x00007fa1322cc668 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x16a5390, event=0x7fff3bf67cc0) at kernel/qcoreapplication.cpp:694
#13 0x00007fa1317f1a2c in QApplicationPrivate::notify_helper (this=0x136cab0, receiver=0x16a5390, e=0x7fff3bf67cc0) at kernel/qapplication.cpp:3799
#14 0x00007fa1317fa04a in QApplication::notify (this=<value optimized out>, receiver=0x16a5390, e=0x7fff3bf67cc0) at kernel/qapplication.cpp:3528
#15 0x00007fa13395e11b in KApplication::notify (this=0x7fff3bf68a60, receiver=0x16a5390, event=0x7fff3bf67cc0) at ../../kdeui/kernel/kapplication.cpp:307
#16 0x00007fa1322cd391 in QCoreApplication::notifyInternal (this=0x7fff3bf68a60, receiver=0x16a5390, event=0x7fff3bf67cc0) at kernel/qcoreapplication.cpp:587
#17 0x00007fa1317f93e8 in QApplicationPrivate::sendMouseEvent (receiver=0x16a5390, event=0x7fff3bf67cc0, alienWidget=0x16a5390, nativeWidget=0x15c81b0, buttonDown=<value optimized out>, 
    lastMouseReceiver=@0x7fa1321770e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:212
#18 0x00007fa13185d939 in QETWidget::translateMouseEvent (this=0x15c81b0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4044
#19 0x00007fa13185c82f in QApplication::x11ProcessEvent (this=0x8b, event=0x7fff3bf68580) at kernel/qapplication_x11.cpp:3162
#20 0x00007fa131883cb4 in x11EventSourceDispatch (s=0x1361150, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:142
#21 0x00007fa129b13afb in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#22 0x00007fa129b172bd in ?? () from /usr/lib/libglib-2.0.so.0
#23 0x00007fa129b1747b in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#24 0x00007fa1322f571f in QEventDispatcherGlib::processEvents (this=0x136d270, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#25 0x00007fa13188347f in QGuiEventDispatcherGlib::processEvents (this=0x15966e0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:198
#26 0x00007fa1322cbcb2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = 1006012528}) at kernel/qeventloop.cpp:143
#27 0x00007fa1322cbe3d in QEventLoop::exec (this=0x7fff3bf688b0, flags={i = 1006012608}) at kernel/qeventloop.cpp:194
#28 0x00007fa1322ce2ed in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#29 0x0000000000402f8b in main (argc=<value optimized out>, argv=<value optimized out>) at ../../kmail/main.cpp:146
Comment 3 Evgenij Besogonov 2009-03-13 17:11:12 UTC
Here is another backtrace. It seems a bit differ.

My actions were the same: click on tray icon -> click on new incoming message -> crash!


Приложение: KMail (kmail), сигнал SIGSEGV
0x00007f037fc7c8d1 in nanosleep () from /lib/libc.so.6
Current language:  auto; currently c

Thread 1 (Thread 0x7f0382c4c770 (LWP 3295)):
[KCrash Handler]
#5  KMail::MessageListView::Widget::getSelectionStats (this=0x25209a0, selectedSernums=@0x7fff8ad94630, selectedVisibleSernums=@0x7fff8ad94620, allSelectedBelongToSameThread=0x7fff8ad9464f, 
    includeCollapsedChildren=<value optimized out>) at ../../kmail/messagelistview/widget.cpp:579
#6  0x00007f0381af767e in KMMainWidget::updateMessageActions (this=0x251c230) at ../../kmail/kmmainwidget.cpp:4288
#7  0x00007f0381b0f1f5 in KMMainWidget::qt_metacall (this=0x251c230, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff8ad94750) at ./kmmainwidget.moc:363
#8  0x00007f038110e6e4 in QMetaObject::activate (sender=0x2bbb760, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x2c81fc0) at kernel/qobject.cpp:3031
#9  0x00007f0381108ff3 in QObject::event (this=0x2bbb760, e=0x4) at kernel/qobject.cpp:1120
#10 0x00007f038061ea5d in QApplicationPrivate::notify_helper (this=0x22baab0, receiver=0x2bbb760, e=0x7fff8ad94e00) at kernel/qapplication.cpp:3803
#11 0x00007f03806267da in QApplication::notify (this=0x7fff8ad95260, receiver=0x2bbb760, e=0x7fff8ad94e00) at kernel/qapplication.cpp:3768
#12 0x00007f038278b11b in KApplication::notify (this=0x7fff8ad95260, receiver=0x2bbb760, event=0x7fff8ad94e00) at ../../kdeui/kernel/kapplication.cpp:307
#13 0x00007f03810fa391 in QCoreApplication::notifyInternal (this=0x7fff8ad95260, receiver=0x2bbb760, event=0x7fff8ad94e00) at kernel/qcoreapplication.cpp:587
#14 0x00007f0381126266 in QTimerInfoList::activateTimers (this=0x22af110) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:209
#15 0x00007f03811227bd in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:160
#16 0x00007f0378940afb in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#17 0x00007f03789442bd in ?? () from /usr/lib/libglib-2.0.so.0
#18 0x00007f037894447b in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#19 0x00007f038112271f in QEventDispatcherGlib::processEvents (this=0x22bb270, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#20 0x00007f03806b047f in QGuiEventDispatcherGlib::processEvents (this=0x24e6700, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:198
#21 0x00007f03810f8cb2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -1965469584}) at kernel/qeventloop.cpp:143
#22 0x00007f03810f8e3d in QEventLoop::exec (this=0x7fff8ad950b0, flags={i = -1965469504}) at kernel/qeventloop.cpp:194
#23 0x00007f03810fb2ed in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#24 0x0000000000402f8b in main (argc=<value optimized out>, argv=<value optimized out>) at ../../kmail/main.cpp:146
Comment 4 Evgenij Besogonov 2009-03-24 16:28:44 UTC
Some additional info about that crash report:

1) messages are stored in 'mbox' format;

2) KMail crashes _only_ when I'm trying to view a message just after compressing a folder.
Compress folder_1 -> click on a message in folder_1 -> CRASH!
Compress folder_1 -> change folder to folder_2 -> click on a message in folder_2 -> all OK
Compress folder_1 -> change folder to folder_2 -> change folder back to folder_1 -> click on a message in folder_1 -> all OK

It doesn't matter what aggregate mode to use.

Should I close this bug and submit another, with more relevant description?
Comment 5 Szymon Stefanek 2009-06-11 04:31:22 UTC
SVN commit 980061 by stefanek:

Possibly fix the issues with the folder being closed by
the compaction jobs (and thus various asserts triggering
in the StorageModel code).

Not totally sure that all the bugs I'm closing had exactly
the same cause (though the backtrace is exactly the same).
If you still can reproduce the bug please reopen ONE of
these.

BUG: 186940
BUG: 188219
BUG: 194960
BUG: 195893




 M  +4 -0      folderstorage.h  
 M  +1 -0      kmfolder.cpp  
 M  +4 -0      kmfolder.h  
 M  +1 -0      kmfoldermaildir.cpp  
 M  +3 -1      kmfoldermbox.cpp  
 M  +2 -0      messagelistview/core/model.cpp  
 M  +1 -0      messagelistview/core/view.cpp  
 M  +17 -1     messagelistview/storagemodel.cpp  
 M  +5 -0      messagelistview/storagemodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=980061