Possibly fix the issues with the folder being closed by the compaction jobs (and thus various asserts triggering in the StorageModel code).

Not totally sure that all the bugs I'm closing had exactly
the same cause (though the backtrace is exactly the same).
If you still can reproduce the bug please reopen ONE of
these.

BUG: 186940
BUG: 188219
BUG: 194960
BUG: 195893



svn path=/trunk/KDE/kdepim/; revision=980061